Adds service logic to call OpenAI

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,4 +15,5 @@ services:
     volumes:
       - .:/app    
     environment:
-      OPENWEATHERMAP_API_KEY: "mock-api-key"      
+      OPENWEATHERMAP_API_KEY: "mock-api-key"
+      OPENAI_API_KEY: "mock-api-key"
